[tool.poetry]
name = "test_task_vk"
version = "0.1.0"
description = ""
authors = [""]

[tool.poetry.dependencies]
python = "3.9.13"
pytest = "^7.1.3"
isort = "^5.10.1"

[tool.poetry.dev-dependencies]
autopep8 = "^1.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
